added x86 and anyCPU platforms to fnecore so that visual studio stops bitching

--- a/fnecore.csproj
+++ b/fnecore.csproj
@@ -5,6 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <InvariantGlobalization>true</InvariantGlobalization>
     <Deterministic>False</Deterministic>
+    <Platforms>x86;AnyCPU</Platforms>
   </PropertyGroup>
 
 </Project>
